--- a/bio.html
+++ b/bio.html
@@ -69,14 +69,18 @@
                 </div>
             </div>
         </div>
+	<div class="container">
+		<div class="jumbotron">
+			<figure>
+				<img src="img/canto.jpg" width="100%" height="100%">
+				<figcaption align="center"><em>Capa do disco cantoria</em></figcaption>
+			</figure>
+			</div>
+	</div>
 	
 		<div class="container">
 			<div class="jumbotron">
-	
-			<img src="img/das barracas do rio gavião.jpg" alt="capa do disco das barracas do rio gavião de elomar" width="255" height="255">
-			<img src="img/na quadrada das aguas perdidas.jpg" alt="capa do disco na quadrada das aguas perdidas de elomar" width="255" height="255">
-			<img src="img/sertania.jpg" alt="capa do disco sertania de elomar" width="255" height="255">
-			<hr>
+			
 			<br>
 			<p style="">
 			O Sr. Ernesto Santos Mello, filho de tradicional família de fazendeiros da Zona da Mata do Itambé e da região do Mata - de - Cipó de Vitória da Conquista, casou-se com D. Eurides Gusmão Figueira Mello, de ascendência hebraica (cristão novo da linhagem Figueira e Azeitum). Por dificuldades econômicas ou mesmo por costume da época, quiçá, habitaram nos primeiros tempos a velha casa da Fazenda Boa Vista, propriedade de seus avós Virgílio Figueira e D. Maricota Gusmão Figueira. Ali, naquela velha casa, onde pousaram levas e levas de retirantes flagelados das grandes secas cíclicas do sertão nordestino, aos 21 de dezembro de 1937, nasceu Elomar Figueira Mello, primogênito do jovem casal .
@@ -90,6 +94,9 @@
 			<p>
 			A música e a poesia essencial, com a força de seus encantamentos, despertaram o compositor numa idade muito tenra, e o poeta, um pouco mais tarde. Aos sete anos, no São Joaquim, os primeiros contatos inevitáveis com a música profana de menestréis errantes, como Zé Krau, Zé Guelê e Zé Serradô, tem maior importância, destacando-se o primeiro pela forma esdrúxula de suas parcelas ou pelas narrativas épicas amargas que já despertavam profundos sentimentos na alma do embrionário compositor. É bom assinalar que até então só tinha ouvido a música eclesiástica do hinário cristão, do culto batista evangélico, fé única de sua família da parte de sua mãe.
 		</p>
+				<div style="float: left; margin: 2%" >
+					<figure align="right"><img src="img/das barracas do rio gavião.jpg" width="375" height="375"></figure>
+				</div>
 			<p>
 			Assim que ouviu os primeiros acordes de viola, violão e sanfona e as primeiras estrofes das tiranas dos côcos e parcelas dos três Zés, têm início as primeiras fugidas de casa, pelas bocas-de-noite, não só para ouvir como também, por excelência, para aprender os primeiros tons no braço do violão, o qual será, a partir dali, seu instrumento definitivo. Note-se bem que estas proezas davam-se às voltas e muito às escondidas, pois que não só para seus pais e parentes, como também para toda sociedade de então, labutar com música era coisa para vagabundo. Tocador de violão, viola ou sanfona, era sinônimo de irresponsável. As primeiras composições datam dos onze anos. Já a partir dos sete , oito anos quando vinha à cidade, toda noite ia à casa do Tio Flávio ouvir no rádio uma música estranha executada com instrumentos estranhos diferentes do violão , viola , sanfona etc... Música esta que mal começava logo, terminava. Anos mais tarde ao chegar a capital descobre que aquela música era a protofonia de “O Guarani” e quando mortificado também descobre escrita musical, a partìtura e o que mais lhe causou espanto: a existência de milhares de músicas, escritas por milhares de compositores que viveram a partir de centenas de anos passados.
 		</p>
@@ -102,6 +109,10 @@
 			<p>
 			Em 1969, sela o caderno da sua primeira ópera, o "Auto do Catingueira", mais tarde, parcialmente partiturada, face o caráter popular da obra. Durante a década de 70, projetou muito da arquitetura e um pouco mais na música. No começo dos anos 80 inicia a carreira de peregrino menestrel, de viola na mão, errante, de palco em palco pelos teatros do país, conquistando uma pequena platéia composta de poetas, músicos, compositores e de intelectuais de linhagem pura, sem modernosas e, por fim, de simples pessoas do povo, atraídas mais pela linguagem dialetal, a temática sertânica e as melodias fora de moda e (segundo Dr. Raimundo Cunha) indançáveis.
 		</p>
+				<div style="float: left; margin: 2%" >
+					<figure align="right"><img src="img/na quadrada das aguas perdidas.jpg" width="375" height="375"></figure>
+				</div>
+
 			<p>
 			A partir daí, quando já abandonando a profissão liberal e em firmando-se mais fundamente na composição, compõe a Fantasia leiga para um Rio Seco, confiando a escrita orquestral a seu amigo e patrício de sertão Maestro Lindembergue Cardoso, por ainda ser ananota em escrita para orquestra. Em 1983, por ocasião da gravação do Auto da Caatingueira, na Casa dos Carneiros, fazenda onde mora desde 1980, faz sua primeira incursão no universo orquestral, quando partitura a abertura do Auto da Caatingueira para violão, flauta e violoncelo.
 		</p>
@@ -117,6 +128,9 @@
 			<p>
 			Numa certa feita, pelos idos dos anos de 1960, durante um rigoroso inverno, quase morre entrevado e à míngua num frio porão de uma casa-de-pensão na Avenida Sete, onde foi valido, abaixo de Deus, por uma estudante de enfermagem, mineira, que lhe dava o alimento de colher na boca, por impossibilidade de movimentar pernas, braços e pescoço gravemente atacados por inesperado reumatismo poli-articular agudo. Lurdinha era seu nome. Nestas circunstâncias foi forjado o cantor dos "Retirantes", o poeta de "Os Pobres, os Miseráveis e os Desvalidos".
 		</p>
+				<div style="float: right; margin: 2%" >
+					<figure align="right"><img src="img/sertania.jpg" width="432" height="423"></figure>
+				</div>
 			<p>
 			O ano que passou em sua terra natal, a serviço da pátria, foi de grande importância em sua formação musical, pois que na convivência de primos, de amigos, poetas e cantores, livre de maiores responsabilidades com os estudos, conheceu de perto a música nacional urbana, a seresta, o samba e o tango argentino. São seus contemporâneos deste gosto: Camilo de Jesus Lima, Euríclides Formiga, Chagas, o seu tão querido tio Valter, brilhante cantor, junto a mais de meia centena de primos e amigos mais ou menos da mesma idade, os quais durante o dia estudavam ou lidavam nas fazendas circunvizinhas. Nas noites, era o declamar Cecéu, recitar Kayan, Lamartine, Rabelo da Silva, Camões e violões e serestas nestas marés, muitas e tantas vezes tentava mostrar suas composições... - "Para, para, para" gritavam. É que sua música nova doía nos ouvidos d'antanho.
 		</p>
@@ -129,9 +143,14 @@
 			<p>
 			A partir dos dezessete, já enveredava-se pelas novelas de cavalaria em leituras longas e sonhadoras. Bate-se frontalmente com a chamada arte contemporânea. Horror à dita cultura ( que segundo ele é um DX, salvo o bom cinema) estatudinese da América do Norte, o que lhe traz à lembrança palavras de antigas profecias "sertanezas", que sentenciaram: "que haverá de chegar um tempo de baixar os muros e levantar os munturos - vivemos o tempo do culto às nulidades. São os minimalismos que estão chegando....", clama o compositor. Assim, para Figueira Mello o que importa é concluir suas óperas, antífonas e galopes, pôr tudo em partituras a nanquim e enfardados em campa antiga, guardar o monobloco passageiro do tempo até a estação futura, bem-vinda quadra remota, onde o aguarda uma geração que, por justiça, haverá por certo de ouvir e amar sua música tão fora de moda nestes dias. Ó Tempora! Ó Mores!
 		</p>
+				<div align="center" style="margin: 2%">
+						<figure><img src="img/Elomar.jpg"img/das barracas do rio gavião.jpg" "width="375" height="375"></figure>
+						<br>
+						<br>
+						<a href="#"><em>voltar ao topo</em></a>
+				</div>
 			</div>
 		</div>
-		
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <!-- Latest compiled JavaScript -->
