--- a/bio.html
+++ b/bio.html
@@ -3,8 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>Porteira - Biografia</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Oleo+Script:400,700" rel="stylesheet">
+   	<link href="https://fonts.googleapis.com/css?family=Teko:400,700" rel="stylesheet">
 </head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 <style>
 	body{
 		background-color: #6F6C53;
@@ -18,6 +21,8 @@
 	-moz-osx-font-smoothing: grayscale;
 	}p{
 		text-align: justify;
+	}.classe{
+		font-family: 'Oleo Script', cursive;
 	} 
 </style>
 <body>
@@ -31,15 +36,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Porteira Oficial de Elomar</a>
+              <a class="navbar-brand" href="home.html">Porteira Oficial de Elomar</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="home.html">Home</a></li>
                 <li class="active"><a href="#">Biografia</a></li>
-                <li><a href="#contact">Contato</a></li>
-				<li><a href="#">Curriculum Operae</a></li>
-				<li><a href="#">Modus Vivendi</a></li>				  
+				<li><a href="contato.html">Contato</a></li>
+				<li><a href="cv.html">Curriculum Operae</a></li>
+				<li><a href="mv.html">Modus Vivendi</a></li>				  
               </ul>
             </div>
           </div>
@@ -54,17 +59,23 @@
             <div class="carousel-inner">
                 <div class="item active">
                     <div class="carousel-caption">
-                        <h3><em>"This is the First Label"</em></h3>
+                        <span class="classe">
+						<h3><em>"Minha vida é chiqueirar e pastorar, tangerino de ovelhas e bodes"</em></h3>
+						</span>	
                     </div>
                 </div>
                 <div class="item">
                     <div class="carousel-caption">
+						<span class="classe">
                         <h3><em>"This is the Second Label"</em></h3>
+						</span>
                     </div>
                 </div>
                 <div class="item">
                     <div class="carousel-caption">
+						<span class="classe">
                         <h3><em>"This is the Third Label"</em></h3>
+						</span>	
                     </div>
                 </div>
             </div>
@@ -82,7 +93,7 @@
 			<div class="jumbotron">
 			
 			<br>
-			<p style="">
+			<p>
 			O Sr. Ernesto Santos Mello, filho de tradicional família de fazendeiros da Zona da Mata do Itambé e da região do Mata - de - Cipó de Vitória da Conquista, casou-se com D. Eurides Gusmão Figueira Mello, de ascendência hebraica (cristão novo da linhagem Figueira e Azeitum). Por dificuldades econômicas ou mesmo por costume da época, quiçá, habitaram nos primeiros tempos a velha casa da Fazenda Boa Vista, propriedade de seus avós Virgílio Figueira e D. Maricota Gusmão Figueira. Ali, naquela velha casa, onde pousaram levas e levas de retirantes flagelados das grandes secas cíclicas do sertão nordestino, aos 21 de dezembro de 1937, nasceu Elomar Figueira Mello, primogênito do jovem casal .
 		</p>
 			<p>
