--- a/bio.html
+++ b/bio.html
@@ -44,7 +44,8 @@
                 <li class="active"><a href="#">Biografia</a></li>
 				<li><a href="contato.html">Contato</a></li>
 				<li><a href="cv.html">Curriculum Operae</a></li>
-				<li><a href="mv.html">Modus Vivendi</a></li>				  
+				<li><a href="mv.html">Modus Vivendi</a></li>
+				<li><a href="disco.html">Discografia</a></li>  
               </ul>
             </div>
           </div>
