--- a/bio.html
+++ b/bio.html
@@ -36,11 +36,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="home.html">Porteira Oficial de Elomar</a>
+              <a class="navbar-brand" href="index.html">Porteira Oficial de Elomar</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="#">Biografia</a></li>
 				<li><a href="contato.html">Contato</a></li>
 				<li><a href="cv.html">Curriculum Operae</a></li>
